--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.0.1",
     "react": "^18.1.0",
+    "react-avatar-edit": "^1.2.0",
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^18.1.0",
+    "react-image-crop": "^10.1.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -45,6 +47,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy" : "http://localhost:3001"
-
+  "proxy": "http://localhost:3001"
 }
