--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,11 @@ uploads
 public/icons
 public/images
 client/public/images
+cache_files/caches_category
+cache_files/caches_interest
+cache_files/caches_orders
+cache_files/caches_products
+cache_files/caches_review
 */dist
 */client/*/dist
 .env
