--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-image-crop": "^10.1.5",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-devtools-extension": "^2.13.9",
