login and regiter pages  bug fix first rev

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=3001
 EMAIL_HOST='smtp.ethereal.email'
 EMAIL_PORT=587
-EMAIL_USER_LOGIN='felicita15@ethereal.email'
-EMAIL_USER_PASS='dFhZ1QfVYkaB61kcuE'
+EMAIL_USER_LOGIN='lela.hegmann83@ethereal.email'
+EMAIL_USER_PASS='rV114a9NnDGyWf8CFS'
